ghc-4335c07/testsuite/tests/typecheck/should_fail/T7645.hs
{-# LANGUAGE TypeOperators, KindSignatures #-}
module T7645 where

data (+) a b = P

f :: ((+) a (a :: *), Maybe)
f = undefined

